# Cairn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GRAMMAR.md  README.md  SPEC.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feedback.yml  proposal.yml
.github/workflows/: ci.yml
docs/: FUNCTIONAL-LAYOUT-LOAD.md  GRAMMAR-PARSER.md  HCI-TOUCHPOINTS.md  HUMAN-FACTORS-METHODOLOGY.md  UI-SIMULATION.md  VIEW-GENERATOR-REQUIREMENTS.md  VIEW-GENERATOR.md  augmentation-integration-notes.md  future-usage-logging-spec.md  usage-modes.md
docs/analysis/: customer-po-review-layout-load.md  customer-po-review-layout.json  customer-po-review-ui-annotations.cairn.md  customer-po-review-ui-evidence.md  customer-po-review-ui-sim-report.json  family-human-factors-notes.md  family-system-discovery.md  galeed-trace-observer-sample.md  hoglah-human-factors.md  mahlah-human-factors.md  mahlah-missing-information-ui-annotations.cairn.md  mahlah-missing-information-ui-evidence.md  mahlah-missing-information-ui-sim-report.json  mahlah-recovery-loop-ui-annotations.cairn.md  mahlah-recovery-loop-ui-evidence.md  mahlah-recovery-loop-ui-roleplay.md  mahlah-recovery-loop-ui-sim-report.json  mahlah-ui-annotations.cairn.md  mahlah-ui-evidence.md  mahlah-ui-roleplay.md  mahlah-ui-sim-report.json  noa-live-observer-sample.md  noa-system-discovery.md  noah-live-observer-sample.md  tirzah-generated-output-human-factors.md  tirzah-semantic-review-human-factors.md
docs/galeed/: emitter-contract.md  sample-trace-events.jsonl
docs/observations/: galeed-trace-observations.jsonl  noa-live-observer-sample.jsonl  noah-live-observer-sample.jsonl
docs/orchestration/: agent-harness-playbook.md  manual-agent-analysis.cairn.md  manual-agent-analysis.human-factors.md  manual-agent-analysis.narrative.md
docs/proposals/: live-agentic-observer-proposal.md  organisational-processes-proposal.md  psychological-processes-proposal.md  sociological-processes-proposal.md
docs/scenarios/: customer-po-review-layout.json  mahlah-human-load.json  mahlah-missing-information.json  mahlah-recovery-loop.json
examples/: README.md  accounts-payable-exception.cairn.md  codex-review-gate.cairn.md  cross-domain-org-change.cairn.md  customer-po-review.cairn.md  galeed.cairn.md  hoglah-execution.cairn.md  hoglah-submit.cairn.md  hoglah.cairn.md  keturah.cairn.md  llm_command_stub.py  mahalath.cairn.md  mahlah.cairn.md  milcah.cairn.md  mizpah.cairn.md  org-adkar-individual-change.cairn.md  org-culture-change.cairn.md  org-kotter-8step-change.cairn.md  org-lewin-change.cairn.md  org-mckinsey-7s.cairn.md  org-stakeholder-engagement.cairn.md  psych-attachment-regulation.cairn.md  psych-cognitive-dissonance.cairn.md  psych-dual-process-decision.cairn.md  psych-gross-emotion-regulation.cairn.md  psych-metacognition.cairn.md  psych-operant-conditioning.cairn.md  psych-self-determination-motivation.cairn.md  relational-substrate.cairn.md  round-robin-debate.cairn.md  socio-conflict-resolution.cairn.md  socio-norm-formation.cairn.md  socio-social-movements.cairn.md  socio-socialization.cairn.md  socio-symbolic-interaction.cairn.md  tirzah-generated-output.cairn.md  tirzah-ingest.cairn.md  tirzah-plan-interpreter.cairn.md  tirzah-recursive-planning.cairn.md  tirzah-semantic-review.cairn.md  (+3 more)
examples/corporate/: business-lifecycle-suite.cairn.md
examples/cross-cutting/: cairn-meta-examples.cairn.md
examples/governance-risk-compliance/: governance-risk-compliance-suite.cairn.md
examples/mappings/: human-systems-interface-map.md  research-grounding-notes.md  spec-grammar-review.md
examples/occupational-health/: occupational-health-suite.cairn.md
examples/org-change/: ai-native-change-suite.cairn.md
examples/psychological/: psychological-work-interfaces.cairn.md
examples/sociological/: sociological-work-interfaces.cairn.md
examples/technical-agentic/: technical-agentic-suite.cairn.md
okf/: index.md
okf/concepts/: augmentation-process.md  backbone-and-render-profiles.md  composition.md  constructs.md  document-modes.md  functional-layout-load.md  hci-touchpoints.md  human-factors.md  index.md  state.md  tags.md
okf/reference/: examples.md  grammar.md  index.md  spec.md
scripts/: codex_llm_provider.py  validate_examples.py
src/cairn/: __init__.py  agent_harness.py  agent_harness_cli.py  cli.py  conformance.py  galeed_adapter.py  galeed_observe_cli.py  human_factors.py  human_factors_cli.py  interface_recommendations.py  interface_recommendations_cli.py  layout_load.py  layout_load_cli.py  live_observer.py  live_observer_cli.py  llm_adapters.py  llm_wrappers.py  manifest.py  observation_contract.py  reporting.py  reporting_cli.py  system_discovery.py  system_discovery_cli.py  ui_annotations_cli.py  ui_evidence.py  ui_evidence_cli.py  ui_pipeline_cli.py  ui_roleplay_cli.py  ui_scenario_validate_cli.py  ui_scenarios.py  ui_sim_cli.py  ui_sim_runner.mjs  validate_cli.py  web.py
src/cairn.egg-info/: PKG-INFO  SOURCES.txt
src/cairn/grammar/: __init__.py  ast.py  bridge.py  extract.py  lexer.py  parser.py  plan_export.py  serialize.py  (+2 more)
tests/: test_agent_harness.py  test_conformance.py  test_examples.py  test_galeed_adapter.py  test_grammar.py  test_human_factors.py  test_interface_recommendations.py  test_layout_load.py  test_live_observer.py  test_llm_wrappers.py  test_manifest.py  test_observation_contract.py  test_render.py  test_render_queue.py  test_reporting.py  test_system_discovery.py  test_templates.py  test_ui_evidence.py  test_ui_pipeline.py  test_ui_scenarios.py  test_web.py
(+10 files in other folders)
