[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-lang"
version = "0.4.1"
description = "Cairn — process meta-language: spec, grammar, and a machine-readable plan-conformance surface (distribution cairn-lang; import name cairn)."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "gellsmore-svg"},
]
keywords = ["process", "plan", "grammar", "conformance", "recursive", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Dependency-free: the conformance surface is pure stdlib so any runtime can adopt it.
dependencies = [
    "keturah>=0.1",  # LLM-interface manifest (build_manifest / to_mcp)
]

[project.scripts]
cairn-render = "cairn.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
render = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
