[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn-lang"
version = "0.8.0"
description = "Cairn — a human-readable process language for governed agentic work in human systems, with grammar and plan conformance."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "gellsmore-svg"},
]
keywords = ["process", "plan", "agentic", "governance", "grammar", "conformance", "recursive", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Dependency-free: the conformance surface is pure stdlib so any runtime can adopt it.
dependencies = [
    "keturah>=0.1",  # LLM-interface manifest (build_manifest / to_mcp)
]

[project.scripts]
cairn-render = "cairn.cli:main"
cairn-human-factors = "cairn.human_factors_cli:main"
cairn-ui-sim = "cairn.ui_sim_cli:main"
cairn-ui-evidence = "cairn.ui_evidence_cli:main"
cairn-ui-roleplay = "cairn.ui_roleplay_cli:main"
cairn-validate = "cairn.validate_cli:main"
cairn-serve = "cairn.web:main"

[project.urls]
Homepage = "https://github.com/gellsmore-svg/Cairn"
Repository = "https://github.com/gellsmore-svg/Cairn"
Issues = "https://github.com/gellsmore-svg/Cairn/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "fastapi>=0.110", "uvicorn>=0.29", "httpx", "pyyaml>=6.0"]
render = ["pyyaml>=6.0"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
export = ["python-docx>=1.0", "fpdf2>=2.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cairn = ["ui_sim_runner.mjs"]
